--- a/src/assets/main.scss
+++ b/src/assets/main.scss
@@ -2,21 +2,26 @@ html {
   font-size: 10px;
 }
 
-.main {
+.main-edit {
   display: flex;
   width: 100%;
   height: auto;
 }
 
-.navbar {
+.content {
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+}
+
+.navbar-edit {
   width: 320px;
   display: flex;
   flex-direction: column;
   background-color: #575353;
-  height: 95.4vh;
+  height: 100vh;
   padding: 16px;
   gap: 16px;
-  position: fixed;
   overflow-y: auto;
 
   &__label {
